Initial index page code.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,77 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+    <section>
+      <div>       
+        <nav>
+          <!-- x button -->
+          <div>
+
+          </div>
+
+          <!-- apple logo -->
+          <div>
+            
+          </div>
+
+          <!-- search box -->
+          <div>
+
+          </div>
+
+          <!-- Menu items -->
+          <div>
+            <ul>
+              <li>Mac</li>
+              <li>iPod</li>
+              <li>iPhone</li>
+              <li>Watch</li>
+              <li>TV</li>
+              <li>Music</li>
+              <li>Support</li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+
+      <main>
+        <section>
+          <div>
+            <h1>iPhone 11 Pro</h1>
+            <p>Pro cameras. Pro display. Pro performance.</p>
+            <p>From $0 down with trade-in.*</p>
+            <a href="#">Learn more ></a>
+            <a href="#">Pre-Order ></a>
+            <!-- image goes here -->
+          </div>
+        </section>
+
+        <section>
+          <div>
+            <h1>iPhone 11</h1>
+            <p>Just the right amount of everything.</p>
+            <p>From $0 down with trade-in.*</p>
+            <a href="#">Learn more ></a>
+            <a href="#">Pre-Order ></a>
+            <!-- image goes here -->
+          </div>
+        </section>
+
+        <section>
+            <div>
+              <h1>WATCH</h1>
+              <h2>SERIES 5</h2>
+              <p>With the new Always-On Retina display.</p>
+              <p>You've never seen a watch like this.</p>
+              <a href="#">Learn more ></a>
+              <a href="#">Order ></a>
+              <!-- image goes here -->
+            </div>
+          </section>
+
+      </main>  
+    </section>
+
   </body>
 </html>
