Added css and Index page changes.

--- a/index.html
+++ b/index.html
@@ -11,76 +11,60 @@
   </head>
   <body>
 
-    <section>
-      <div>       
-        <nav>
-          <!-- x button -->
-          <div>
-
-          </div>
-
-          <!-- apple logo -->
-          <div>
-            
-          </div>
-
-          <!-- search box -->
-          <div>
-
-          </div>
-
-          <!-- Menu items -->
-          <div>
-            <ul>
-              <li>Mac</li>
-              <li>iPod</li>
-              <li>iPhone</li>
-              <li>Watch</li>
-              <li>TV</li>
-              <li>Music</li>
-              <li>Support</li>
-            </ul>
-          </div>
-        </nav>
+    <header class="heading">
+      <div class="logo">
+        <img src="/img/logo.svg" alt="Aple logo">
       </div>
+      <nav>
+        <button>=</button>
+        <input type="search">
+        <ul>
+          <li>Mac<a href=""></a></li>
+          <li>iPod<a href=""></a></li>
+          <li>iPhone<a href=""></a></li>
+          <li>Watch<a href=""></a></li>
+          <li>TV<a href=""></a></li>
+          <li>Music<a href=""></a></li>
+          <li>Support<a href=""></a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <main>
-        <section>
-          <div>
-            <h1>iPhone 11 Pro</h1>
-            <p>Pro cameras. Pro display. Pro performance.</p>
-            <p>From $0 down with trade-in.*</p>
-            <a href="#">Learn more ></a>
-            <a href="#">Pre-Order ></a>
-            <!-- image goes here -->
-          </div>
-        </section>
+    <main>
+      <section class="iphone11pro">
+        <div>
+          <h1>iPhone 11 Pro</h1>
+          <p>Pro cameras. Pro display. Pro performance.</p>
+          <p>From $0 down with trade-in.*</p>
+          <a href="#">Learn more ></a>
+          <a href="#">Pre-Order ></a>
+          <!-- image goes here -->
+        </div>
+      </section>
 
-        <section>
-          <div>
-            <h1>iPhone 11</h1>
-            <p>Just the right amount of everything.</p>
-            <p>From $0 down with trade-in.*</p>
-            <a href="#">Learn more ></a>
-            <a href="#">Pre-Order ></a>
-            <!-- image goes here -->
-          </div>
-        </section>
+      <section class="iphone11">
+        <div>
+          <h1>iPhone 11</h1>
+          <p>Just the right amount of everything.</p>
+          <p>From $0 down with trade-in.*</p>
+          <a href="#">Learn more ></a>
+          <a href="#">Pre-Order ></a>
+          <!-- image goes here -->
+        </div>
+      </section>
 
-        <section>
-            <div>
-              <h1>WATCH</h1>
-              <h2>SERIES 5</h2>
-              <p>With the new Always-On Retina display.</p>
-              <p>You've never seen a watch like this.</p>
-              <a href="#">Learn more ></a>
-              <a href="#">Order ></a>
-              <!-- image goes here -->
-            </div>
-          </section>
+      <section class="watch">
+        <div>
+          <h1>WATCH</h1>
+          <h2>SERIES 5</h2>
+          <p>With the new Always-On Retina display.</p>
+          <p>You've never seen a watch like this.</p>
+          <a href="#">Learn more ></a>
+          <a href="#">Order ></a>
+          <!-- image goes here -->
+        </div>
+      </section>
 
-      </main>  
-    </section>
-
+    </main> 
   </body>
 </html>
