Modified css and index page.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Apple.com</title>
     <meta name="description" content="Describe the project here.">
     <meta name="author" content="Your Name Here">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -38,7 +38,6 @@
           <p>From $0 down with trade-in.*</p>
           <a href="#">Learn more ></a>
           <a href="#">Pre-Order ></a>
-          <!-- image goes here -->
         </div>
       </section>
 
@@ -49,19 +48,17 @@
           <p>From $0 down with trade-in.*</p>
           <a href="#">Learn more ></a>
           <a href="#">Pre-Order ></a>
-          <!-- image goes here -->
         </div>
       </section>
 
       <section class="watch">
         <div>
-          <h1>WATCH</h1>
-          <h2>SERIES 5</h2>
+          <!-- watch logo here -->
+          <img src="/img/watch-logo.png" alt="Apple watch logo">
           <p>With the new Always-On Retina display.</p>
           <p>You've never seen a watch like this.</p>
           <a href="#">Learn more ></a>
           <a href="#">Order ></a>
-          <!-- image goes here -->
         </div>
       </section>
 
