--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
   <body>
 
     <header class="heading">
+      <div>
+        <!-- toggle bottom -->
+      </div>
+
       <div class="logo">
         <img src="/img/logo.svg" alt="Aple logo">
       </div>
+      
       <nav>
-        <button>=</button>
-        <input type="search">
+        <input type="search" class="searchbox" placeholder="Search apple.com/ca">
         <ul>
-          <li>Mac<a href=""></a></li>
-          <li>iPod<a href=""></a></li>
-          <li>iPhone<a href=""></a></li>
-          <li>Watch<a href=""></a></li>
-          <li>TV<a href=""></a></li>
-          <li>Music<a href=""></a></li>
-          <li>Support<a href=""></a></li>
+          <li class="borderline navborder"><a href="#">Mac</a></li>
+          <li class="borderline navborder"><a href="#">iPod</a></li>
+          <li class="borderline navborder"><a href="#">iPhone</a></li>
+          <li class="borderline navborder"><a href="#">Watch</a></li>
+          <li class="borderline navborder"><a href="#">TV</a></li>
+          <li class="borderline navborder"><a href="#">Music</a></li>
+          <li class="navborder"><a href="#">Support</a></li>
         </ul>
       </nav>
     </header>
@@ -35,30 +39,29 @@
         <div>
           <h1>iPhone 11 Pro</h1>
           <p>Pro cameras. Pro display. Pro performance.</p>
-          <p>From $0 down with trade-in.*</p>
-          <a href="#">Learn more ></a>
-          <a href="#">Pre-Order ></a>
+          <p class="grey-line">From $0 down with trade-in.*</p>
+          <a href="#" class="bodylinks">Learn more ></a>
+          <a href="#" class="bodylinks">Pre-Order ></a>
         </div>
       </section>
 
       <section class="iphone11">
         <div>
           <h1>iPhone 11</h1>
-          <p>Just the right amount of everything.</p>
-          <p>From $0 down with trade-in.*</p>
-          <a href="#">Learn more ></a>
-          <a href="#">Pre-Order ></a>
+          <h2>Just the right amount of everything.</h2>
+          <p class="grey-line">From $0 down with trade-in.*</p>
+          <a href="#" class="bodylinks">Learn more ></a>
+          <a href="#" class="bodylinks">Pre-Order ></a>
         </div>
       </section>
 
       <section class="watch">
         <div>
-          <!-- watch logo here -->
           <img src="/img/watch-logo.png" alt="Apple watch logo">
           <p>With the new Always-On Retina display.</p>
           <p>You've never seen a watch like this.</p>
-          <a href="#">Learn more ></a>
-          <a href="#">Order ></a>
+          <a href="#" class="bodylinks">Learn more ></a>
+          <a href="#" class="bodylinks">Order ></a>
         </div>
       </section>
 
