--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     <header class="heading container">
       <article>
         <div class="toggle-button">
-            <!-- toggle bottom -->
+            <!-- toggle botton -->
             <a href="#">x</a>
-            <!-- <P>x</P> -->
           </div>
     
           <div class="logo">
@@ -24,7 +23,7 @@
           </div>
           
           <div class="cart-button">
-            <!-- cart bottom -->
+            <!-- cart botton -->
             <img src="/img/cart.svg" alt="Shopping cart">
           </div>
       </article> 
